# amdfan

./: .SRCINFO  .gitignore  .pylintrc  INSTALL.md  PKGBUILD  README.md  clean_build  configure.ac  pyproject.toml  setup.py
.github/workflows/: python-package.yml
amdfan/: __main__.py  amdfan.py  commands.py  config.py  controller.py  defaults.py
src/amdfan/: amdfan.py  amdfan.service
tests/: test_card.py  test_cli.py  test_curve.py
