[tool.poetry]
name = "amdfan"
version = "0.1.25"
description = "Fan monitor and controller for AMD gpus in Linux"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
homepage = "https://mcgillij.dev/pages/amdfan.html"
repository = "https://github.com/mcgillij/amdfan"
documentation = "https://mcgillij.dev/pages/amdfan.html"
keywords = ["fan", "gpu", "temp", "monitor", "amd"]
classifiers = [
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Boot :: Init",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11"
numpy = "^1.23.5"
pyyaml = "^6.0"
click = "^8.1.3"
rich = "^13.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "*"
flake8 = "*"
black = "*"
pytest = "*"
mypy = "*"
types-pyyaml = "*"

[tool.poetry.scripts]
amdfan = 'amdfan.amdfan:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
