[tool.poetry]
name = "amdfan"
version = "0.2.5"
description = "Fan monitor and controller for AMD gpus in Linux"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
homepage = "https://mcgillij.dev/pages/amdfan.html"
repository = "https://github.com/mcgillij/amdfan"
documentation = "https://mcgillij.dev/pages/amdfan.html"
keywords = ["fan", "gpu", "temp", "monitor", "amd"]
include = ["dist/systemd/amdfan.service"]
classifiers = [
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Boot :: Init",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.11 || ^3.12 || ^3.13"

numpy = "^2.0.0"
pyyaml = "^6.0"
click = "^8.1.3"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "*"
flake8 = "*"
black = "*"
pytest = "*"
mypy = "*"
types-pyyaml = "*"

[tool.poetry.scripts]
amdfan = 'amdfan.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
